# AILingo

./: .gitignore  README.md
.github/: README.md
.github/workflows/: api.yml  deploy.yml  web.yml
api/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yml  docker-compose.yml  manage.py  pyproject.toml
api/api/: asgi.py  settings.py  urls.py  wsgi.py
api/api/charts/: urls.py  views.py
api/charts/: ai_tutor.py  apps.py  urls.py  views.py
api/charts/prompts/: evaluate_solution.txt  generate_question.txt
api/config/: asgi.py  settings.py  urls.py  wsgi.py
api/tutor/: ai_tutor.py  apps.py  serializers.py  urls.py  views.py
api/tutor/prompts/: evaluate_solution.txt  generate_question.txt
terraform/: .gitignore  DEPLOYMENT.md  QUICK_START.md  README.md  main.tf  terraform.tfvars.example  variables.tf
web/: .env.example  Dockerfile  README.md  firebase.json  index.html  package.json
web/src/: App.tsx
web/src/components/: BubbleChart.tsx
web/src/services/: api.ts
